fix overlapping media queries, name size adjust

--- a/style.scss
+++ b/style.scss
@@ -230,14 +230,14 @@ img {
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
 .title a {
     font-size: 7vw;
 }
 }
 
-@media screen and (max-width: 800px) {
+@media (max-width: 800px) {
 
     .container {
         display: block;
@@ -254,7 +254,7 @@ img {
 
     .initials {
         margin-bottom: 0rem;
-        font-size: 10vw;
+        font-size: 11vw;
         flex-grow: 1;
         flex-basis: 3rem;
         border-bottom: none;
@@ -264,11 +264,17 @@ img {
         flex-grow: 8;
         // font-size: 10vw;
         // text-align: right;
-        margin-top: .3rem;
+        margin-top: .6rem;
+        margin-left: 1rem;
     }
 
     .name, .moyame, .job, .jobcont {
         display: inline-block;
+    }
+
+    .sam, .moyame, .job, .jobcont {
+        font-size: 4vw;
+        line-height: .8vw;
     }
 
     .navbar {
@@ -334,5 +340,9 @@ img {
         color: $main-back;
     }
 
+
+}
+
+@media (max-width: 400px) {
 
 }
